# ufc-calendar

./: .gitignore  README.md  credentials.example.json  main.py  pyproject.toml  requirements.txt
.github/workflows/: sync-ufc-calendar.yml
src/: calendar_handler.py  scraper.py  settings.py  ufc_scraper.py
src/models/: __init__.py  ufc_event.py
src/services/: calendar_handler.py  ufc_scraper.py
src/utils/: __init__.py  date.py
